# chatroom

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/engine/: ireceiver.cpp  ireceiver.h  netmessage.cpp  netmessage.h
src/engine/clientlogic/: chatroomclient.cpp  chatroomclient.h
src/engine/serverlogic/: ichatdatabase.cpp  ichatdatabase.h  server.cpp  server.h
src/gui/: administratorwindow.cpp  administratorwindow.h  administratorwindow.ui  messageslistmodel.cpp  messageslistmodel.h  userwindow.cpp  userwindow.h  userwindow.ui  userwindowfabric.cpp  userwindowfabric.h  userwindowfabric.ui
src/simulation/: chatdatabase.cpp  chatdatabase.h  localnetconnector.cpp  localnetconnector.h
